--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
+    "antd": "^5.22.2",
+    "axios": "^1.7.8",
+    "next": "13.5.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.7"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "13.5.7"
+    "eslint-config-next": "13.5.7",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5"
   }
 }
